k8s/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gamedin-staging
  labels:
    name: gamedin-staging
    environment: staging
