k8s/staging/service-dapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: gamedin-dapp
  namespace: staging
  labels:
    app: gamedin-dapp
    app.kubernetes.io/environment: staging
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: gamedin
    env: staging
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: gamedin-dapp
    app.kubernetes.io/environment: staging
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: gamedin
    env: staging
